# nwn-tools

./: .gitignore  CMakeLists.txt  config.h
_MathLib/: CMakeLists.txt  Constants.h  Frustum.cpp  Frustum.h  Matrix.cpp  Matrix.h  Matrix.inl  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
_NmcLib/: CMakeLists.txt  Nmc.h  NmcAttribute.cpp  NmcCache.cpp  NmcCache.h  NmcContext.cpp  NmcContext.h  NmcController.cpp  NmcCoreParsers.cpp  NmcCoreParsers.h  NmcGeometry.cpp  NmcListParser.h  NmcMesh.cpp  NmcMesh.h
_NscLib/: CMakeLists.txt  Nsc.h  NscCodeGenerator.cpp  NscCodeGenerator.h  NscCompat.h  NscCompiler.cpp  NscContext.cpp  NscContext.h  NscDecompiler.cpp  NscPStackEntry.cpp  NscPStackEntry.h  NscParser.ypp  NscParserRoutines.cpp  NscSymbolTable.h
_NwnLib/: CMakeLists.txt  NwnArray.h  NwnBifFile.cpp  NwnBifFile.h  NwnDefines.cpp  NwnDefines.h  NwnDialogTlkFile.cpp  NwnDialogTlkFile.h  NwnHierarchy.h  NwnKeyFile.cpp  NwnKeyFile.h  NwnLoader.cpp  NwnLoader.h  NwnMdlDecomp.cpp  NwnMdlGeometry.cpp  NwnMdlGeometry.h  NwnMdlNodes.cpp  NwnMdlNodes.h  NwnMdlR2A.cpp  NwnMdlSerialize.cpp  NwnMemoryFile.h  NwnModel.h  NwnModuleFile.cpp  NwnModuleFile.h  NwnSoundSet.h  NwnStdLoader.cpp  NwnStdLoader.h  NwnStreamStack.h  NwnStreams.h  NwnTexturePlt.h
nwnmdlcomp/: .gitignore  CMakeLists.txt  nwnmdlcomp.cpp
nwnnsscomp/: .gitignore  CMakeLists.txt  nwnnsscomp.cpp
nwnnsscomp/python/: compiler.cpp  setup.py  test.py
